force-app/main/default/objects/AccessControl__x/AccessControl__x.object-meta.xml
<CustomObject>
    <externalDataSource>DigitalIdentity</externalDataSource>
    <externalName>AccessControl</externalName>
    <label>Access Control</label>
    <pluralLabel>Access Controls</pluralLabel>
</CustomObject>