force-app/main/default/objects/AccessControl__x/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Aegis</complianceGroup>
    <description>Field that contains the Channels that is intended to be blocked or unblocked.</description>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Web Banking</fullName>
            </value>
            <value>
                <fullName>Primary Device</fullName>
                <isActive>false</isActive>
                <label>Primary Device</label>
            </value>
            <value>
                <fullName>EDGE_AUTH_CHANNEL_COMPANION</fullName>
                <isActive>false</isActive>
                <label>Web Banking - Inactive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>