force-app/main/default/objects/AccessControl__x/fields/CreatedBy__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Aegis</complianceGroup>
    <description>Field that holds the username who blocked access to the channel.</description>
    <label>Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>