force-app/main/default/objects/AccessControl__x/fields/DeleteWhenMet__c.field-meta.xml
<CustomField>
    <fullName>DeleteWhenMet__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Aegis</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Field that indicates whether the block should be removed automatically when the Conditional Policy is met.</description>
    <label>Delete When Met</label>
    <type>Checkbox</type>
</CustomField>