force-app/main/default/objects/AccessControl__x/fields/Device__c.field-meta.xml
<CustomField>
    <fullName>Device__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Aegis</complianceGroup>
    <description>Field that lookup to the Device&apos;s ExternalId</description>
    <label>Device</label>
    <length>255</length>
    <referenceTo>Device__x</referenceTo>
    <relationshipLabel>Access Controls</relationshipLabel>
    <relationshipName>Access_Controls</relationshipName>
    <type>ExternalLookup</type>
</CustomField>