force-app/main/default/objects/AccessControl__x/fields/DeviceCorrelationId__c.field-meta.xml
<CustomField>
    <fullName>DeviceCorrelationId__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Aegis</complianceGroup>
    <description>Field that holds the DeviceCorrelationId</description>
    <externalDeveloperName>DeviceCorrelationId</externalDeveloperName>
    <label>Device Correlation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>