force-app/main/default/objects/AccessControl__x/fields/MinimumAAL__c.field-meta.xml
<CustomField>
    <fullName>MinimumAAL__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Aegis</complianceGroup>
    <description>Field that holds the Minimum AALs.</description>
    <label>Minimum AAL</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUTHENTICATION_ASSURANCE_LEVEL_3</fullName>
                <label>3</label>
            </value>
            <value>
                <fullName>AUTHENTICATION_ASSURANCE_LEVEL_4</fullName>
                <label>4</label>
            </value>
            <value>
                <fullName>AUTHENTICATION_ASSURANCE_LEVEL_UNSPECIFIED</fullName>
                <isActive>false</isActive>
                <label>0</label>
            </value>
            <value>
                <fullName>AUTHENTICATION_ASSURANCE_LEVEL_1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>AUTHENTICATION_ASSURANCE_LEVEL_2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>