force-app/main/default/objects/AccessControl__x/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Aegis</complianceGroup>
    <description>Field that contains the concatenated value of both Channel and Policy</description>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>