force-app/main/default/objects/AccessControl__x/fields/PersonaId__c.field-meta.xml
<CustomField>
    <fullName>PersonaId__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Aegis</complianceGroup>
    <description>Field that holds the linked PersonaId of the customer profile.</description>
    <label>Persona ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>