force-app/main/default/objects/AccessControl__x/fields/PersonId__c.field-meta.xml
<CustomField>
    <fullName>PersonId__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Aegis</complianceGroup>
    <description>Field that holds the linked PersonId of the customer profile.</description>
    <label>Person ID</label>
    <length>255</length>
    <referenceTo>PersonDigitalIdentity__x</referenceTo>
    <relationshipLabel>Access Controls</relationshipLabel>
    <relationshipName>AccessControls</relationshipName>
    <type>ExternalLookup</type>
</CustomField>