force-app/main/default/objects/AccessControl__x/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Aegis</complianceGroup>
    <description>Field that holds the list of access policies that can be applied to block access to a specific channel.</description>
    <label>Policy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>POLICY_DENY</fullName>
                <label>Deny</label>
            </value>
            <value>
                <fullName>POLICY_CONDITIONAL</fullName>
                <isActive>false</isActive>
                <label>Conditional</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>